<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string
        name="voting_locations"><a href="https://www.google.com/">Voting Locations</a></string>
    <string name="election_information">Election Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="ballot_information"><a href="https://www.google.com/">Ballot Information</a></string>
    <string name="representative_search">Representative Search</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="zip_code">Zip code</string>
    <string name="city">City</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>

    <!-- TODO: Add necessary string values -->

</resources>
